<resources>
    <string name="app_name">ExamenFinal</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_logout">Logout</string>
    <string name="action_closed">Closed</string>
    <string name="exercise_1_text">Credits</string>
    <string name="exercise_2_text">Login, username and password</string>
    <string name="exercise_3_text">Play Video</string>
    <string name="exercise_4_text">View Calls</string>
    <string name="exercise_5_text">Login, gestures</string>
    <string name="exercise_6_text">Play audio</string>
    <string name="OK">OK</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login_gesture">Sign in - Gestures</string>
    <string name="prompt_score">Score</string>
    <string name="action_save">Save</string>
    <string name="title_activity_calls">CallsActivity</string>
    <string name="title_activity_video">VideoActivity</string>

</resources>
