<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.edu.utp.examenfinal.activities.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_settings"
        android:text="@string/action_settings"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_1_text"
        android:text="@string/exercise_1_text"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_2_text"
        android:text="@string/exercise_2_text"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_3_text"
        android:text="@string/exercise_3_text"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_4_text"
        android:text="@string/exercise_4_text"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_5_text"
        android:text="@string/exercise_5_text"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/exercise_6_text"
        android:text="@string/exercise_6_text"
        android:layout_height="wrap_content" />
</LinearLayout>
